[package]
name = "prettygooey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embed-doc-image = "0.1.4"
iced = "0.10.0"
strum = { version = "0.25.0", features = ["derive"] }

[workspace]
members = [
	"examples/showcase",
]
