[package]
name = "prettygooey"
description = "Set of themed UI components for the iced GUI library"
license = "MIT"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/pieterdd/prettygooey"
include = ["/src", "/docs"]
categories = ["gui"]
keywords = ["gui", "ui", "graphics", "interface", "widgets"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embed-doc-image = "0.1.4"
iced = "0.10.0"
strum = { version = "0.25.0", features = ["derive"] }

[workspace]
members = [
	"examples/showcase",
]
